    a foreign-key referenced table with schema in
    the current search path; an explicit schema will
    be applied to the referenced table only if 
    it actually matches that of the referencing table,
    which also has an explicit schema.   Previously
    it was assumed that "current" schema was synonymous
    with the full search_path.  [ticket:2249]

- mssql
  - "0" is accepted as an argument for limit() which
    will produce "TOP 0". [ticket:2222]

- ext
  - Added local_attr, remote_attr, attr accessors
    to AssociationProxy, providing quick access
    to the proxied attributes at the class
    level. [ticket:2236]

  - Changed the update() method on association proxy
    dictionary to use a duck typing approach, i.e.
    checks for "keys", to discern between update({}) 
    and update((a, b)).   Previously, passing a 
    dictionary that had tuples as keys would be misinterpreted
    as a sequence. [ticket:2275]

0.7.2
=====
- orm
  - Feature enhancement: joined and subquery
    loading will now traverse already-present related
    objects and collections in search of unpopulated
    attributes throughout the scope of the eager load
    being defined, so that the eager loading that is
    specified via mappings or query options
    unconditionally takes place for the full depth,
    populating whatever is not already populated.
    Previously, this traversal would stop if a related
    object or collection were already present leading
    to inconsistent behavior (though would save on
    loads/cycles for an already-loaded graph). For a
    subqueryload, this means that the additional
    SELECT statements emitted by subqueryload will
    invoke unconditionally, no matter how much of the
    existing graph is already present (hence the
    controversy). The previous behavior of "stopping"
    is still in effect when a query is the result of
    an attribute-initiated lazyload, as otherwise an
    "N+1" style of collection iteration can become